--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 
 	<properties>
 		<!-- BOMS -->
-		<javax-javaee-bom.version>7.0a-SNAPSHOT</javax-javaee-bom.version>
-		<java-commons.version>1.1-SNAPSHOT</java-commons.version>
+		<javax-javaee-bom.version>7.0a</javax-javaee-bom.version>
+		<java-commons.version>1.1</java-commons.version>
 		<!-- tech -->
-		<insurance-notification-daemon.version>2.0-SNAPSHOT</insurance-notification-daemon.version>
-		<epayment-notification-daemon.version>2.0-SNAPSHOT</epayment-notification-daemon.version>
-		<lapsa-arquillian-test.version>1.1-SNAPSHOT</lapsa-arquillian-test.version>
+		<insurance-notification-daemon.version>2.0</insurance-notification-daemon.version>
+		<epayment-notification-daemon.version>2.0</epayment-notification-daemon.version>
+		<lapsa-arquillian-test.version>1.1</lapsa-arquillian-test.version>
 	</properties>
 
 	<dependencyManagement>
