--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,10 @@
 	<properties>
 		<!-- BOMS -->
 		<javax-javaee-bom.version>7.0a</javax-javaee-bom.version>
-		<java-commons.version>1.1</java-commons.version>
+		<java-commons.version>1.2</java-commons.version>
 		<!-- tech -->
-		<insurance-notification-daemon.version>2.0</insurance-notification-daemon.version>
-		<epayment-notification-daemon.version>2.0</epayment-notification-daemon.version>
+		<insurance-notification-template-client.version>2.1-SNAPSHOT</insurance-notification-template-client.version>
+		<epayment-notification-template-client.version>2.1-SNAPSHOT</epayment-notification-template-client.version>
 		<lapsa-arquillian-test.version>1.1</lapsa-arquillian-test.version>
 	</properties>
 
@@ -46,20 +46,6 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>tech.lapsa.insurance</groupId>
-				<artifactId>insurance-notification-daemon-root</artifactId>
-				<version>${insurance-notification-daemon.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>tech.lapsa.epayment</groupId>
-				<artifactId>epayment-notification-daemon-root</artifactId>
-				<version>${epayment-notification-daemon.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 			<!-- own -->
 			<dependency>
 				<groupId>${project.groupId}</groupId>
@@ -74,6 +60,16 @@
 				<type>ear</type>
 			</dependency>
 			<!-- tech -->
+			<dependency>
+				<groupId>tech.lapsa.insurance</groupId>
+				<artifactId>insurance-notification-template-client</artifactId>
+				<version>${insurance-notification-template-client.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>tech.lapsa.epayment</groupId>
+				<artifactId>epayment-notification-template-client</artifactId>
+				<version>${epayment-notification-template-client.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>tech.lapsa.lapsa</groupId>
 				<artifactId>lapsa-arquillian-test</artifactId>
