--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 	<scm>
 		<connection>scm:git:https://gitlab.lapsa.tech/lapsa/eurasia36/notification-templates.git</connection>
 		<developerConnection>scm:git:https://gitlab.lapsa.tech/lapsa/eurasia36/notification-templates.git</developerConnection>
-		<tag>v1.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
