--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,11 @@
 	<properties>
 		<!-- BOMS -->
 		<javax-javaee-bom.version>7.0a</javax-javaee-bom.version>
-		<java-commons.version>1.3-SNAPSHOT</java-commons.version>
+		<java-commons.version>1.3</java-commons.version>
 		<!-- tech -->
-		<insurance-notification-template-client.version>2.1-SNAPSHOT</insurance-notification-template-client.version>
-		<epayment-notification-template-client.version>2.1-SNAPSHOT</epayment-notification-template-client.version>
-		<lapsa-arquillian-test.version>1.2-SNAPSHOT</lapsa-arquillian-test.version>
+		<insurance-notification-template-client.version>2.1</insurance-notification-template-client.version>
+		<epayment-notification-template-client.version>2.1</epayment-notification-template-client.version>
+		<lapsa-arquillian-test.version>1.2</lapsa-arquillian-test.version>
 	</properties>
 
 	<dependencyManagement>
