--- a/app/pom.xml
+++ b/app/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>tech.lapsa.eurasia36</groupId>
 		<artifactId>eurasia36-notification-templates-root</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 	</parent>
 
 	<artifactId>eurasia36-notification-templates-app</artifactId>
