--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>tech.lapsa.eurasia36</groupId>
 	<artifactId>eurasia36-notification-templates-root</artifactId>
-	<version>CURRENT-SNAPSHOT</version>
+	<version>20190126r1</version>
 	<packaging>pom</packaging>
 
 	<name>Eurasia36 Lib : Notification templates</name>
@@ -81,7 +81,7 @@
 	<scm>
 		<connection>scm:git:https://github.com/eurasia-insurance/eurasia36-notification-templates.git</connection>
 		<developerConnection>scm:git:https://github.com/eurasia-insurance/eurasia36-notification-templates.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v20190126r1</tag>
 	</scm>
 
 </project>
