--- a/beans/pom.xml
+++ b/beans/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>tech.lapsa.eurasia36</groupId>
 		<artifactId>eurasia36-notification-templates-root</artifactId>
-		<version>20190127r1</version>
+		<version>CURRENT-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>eurasia36-notification-templates</artifactId>
