--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 
 	<properties>
 		<!-- BOMS -->
-		<javax-javaee-bom.version>20190127r1</javax-javaee-bom.version>
-		<java-commons.version>20190127r1</java-commons.version>
+		<javax-javaee-bom.version>CURRENT-SNAPSHOT</javax-javaee-bom.version>
+		<java-commons.version>CURRENT-SNAPSHOT</java-commons.version>
 		<!-- tech -->
-		<insurance-notification-template-client.version>20190127r1</insurance-notification-template-client.version>
-		<epayment-notification-template-client.version>20190127r1</epayment-notification-template-client.version>
-		<lapsa-arquillian-test.version>20190127r1</lapsa-arquillian-test.version>
+		<insurance-notification-template-client.version>CURRENT-SNAPSHOT</insurance-notification-template-client.version>
+		<epayment-notification-template-client.version>CURRENT-SNAPSHOT</epayment-notification-template-client.version>
+		<lapsa-arquillian-test.version>CURRENT-SNAPSHOT</lapsa-arquillian-test.version>
 	</properties>
 
 	<dependencyManagement>
